<resources>
    <string name="app_name">Employee App</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register?</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_age">Enter your Age</string>
    <string name="aready_have_an_account">Aready Have An Account?</string>
    <string name="string_aready_have_an_account">Already  Have An Acount?</string>
    <string name="logout">Logout</string>
    <string name="hello">Hello,</string>
    <string name="email_address">Email Address :</string>
    <string name="full_name">Full Name :</string>
    <string name="age">Age :</string>
    <string name="add_employees_information">Add Employees Information</string>
    <string name="enter_employees_full_name">Enter Employees Full Name</string>
    <string name="enter_employees_email_address">Enter Employees Email Address</string>
    <string name="enter_employees_password">Enter Employees Password</string>
    <string name="todo">TODO</string>
    <string name="enter_employees_department">Enter Employees Department</string>
    <string name="add_employee">Add Employee</string>
    <string name="enter_employees_district">Enter Employees District</string>
    <string name="update_profile">Update Profile</string>
    <string name="hello_here_is_your_information">Profile Information</string>
    <string name="welcome">Welcome To Employee App</string>
    <string name="add_user">Add User</string>
    <string name="employee_department">Employee Department</string>
    <string name="employee_email">Employee Email</string>
    <string name="employee_name">Employee Name</string>
</resources>