<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="@color/white"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:id="@+id/profileImage"
            android:layout_centerVertical="true"
            android:src="@drawable/icon"
            android:contentDescription="@string/todo" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_toEndOf="@+id/profileImage"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employeeName"
                android:text="@string/employee_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employeeDepartment"
                android:text="@string/employee_department"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employeeEmail"
                android:text="@string/employee_email"
                android:textSize="18sp"
                android:fontFamily="sans-serif-light" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>