<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ProfileActivity">
    <TextView
        android:id="@+id/display_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/hello_here_is_your_information"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />
    <ImageView
        android:id="@+id/employeeImage"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_below="@id/display_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="2dp"
        android:src="@drawable/icon"
        android:contentDescription="@string/todo" />
    <TextView
        android:id="@+id/employeeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeeImage"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:autofillHints="" />
    <TextView
        android:id="@+id/employeeEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeeName"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:autofillHints="" />
    <TextView
        android:id="@+id/employeePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeeEmail"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:autofillHints="" />
    <TextView
        android:id="@+id/employeeDepartment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeePassword"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:autofillHints="" />
    <TextView
        android:id="@+id/employeeDistrict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeeDepartment"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:textSize="15sp"
        android:textStyle="bold"
        android:autofillHints="" />


    <Button
        android:id="@+id/signOut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/employeeDistrict"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/button_color"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/progressBarStyleLarge"
        android:layout_centerInParent = "true"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>
</RelativeLayout>